Download Projects/ssu_score/#P1_20142468_v1.0/소스코드/ERR/20190002/13_error.txt
../../STD_DIR/20190002/13.c: In function 'main':
../../STD_DIR/20190002/13.c:12:18: error: storage size of 'sig_act' isn't known
  struct sigacion sig_act;
                  ^~~~~~~
sh: 1: ./13.stdexe: not found
